--- a/css/style.css
+++ b/css/style.css
@@ -3759,6 +3759,20 @@ hamburger
   opacity: 1;
   transform: scale(1.1);
 }
+#footer .footer .socialMedia-links .socialMedia-item.io-item .bg-i {
+  transform: translateX(5vw);
+  opacity: 0;
+}
+#footer .footer .socialMedia-links .socialMedia-item.active-item .bg-i {
+  transform: translateX(0);
+  opacity: 0.1;
+  transition: 1s;
+}
+#footer .footer .socialMedia-links .socialMedia-item.active-item:hover .bg-i {
+  opacity: 0.8;
+  transform: scale(0.7);
+  transition: 0.5s;
+}
 #footer .footer .brand {
   width: 80%;
   padding: 0.3em 0.5em;
