--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -223,8 +223,8 @@
                     position: absolute;
                     right: 1rem;
                     top: 0;
-                    font-size: 5rem;
-                    color: #fff;
+                    font-size: 4rem;
+                    color: $brand;
                     opacity: .1;
                     transition: .25s;
                 }
