--- a/css/style.css
+++ b/css/style.css
@@ -3589,7 +3589,7 @@ hamburger
 #footer .footer .socialMedia-links .socialMedia-item .bg-i {
   position: absolute;
   right: 1rem;
-  top: 0;
+  top: 1rem;
   font-size: 4rem;
   color: rgba(255, 255, 255, 0.7);
   opacity: 0.1;
@@ -3599,8 +3599,8 @@ hamburger
   font-size: 1.25rem;
   margin-bottom: 0.25rem;
   text-transform: capitalize;
-  color: rgba(255, 255, 255, 0.7);
   color: #f4f4f4;
+  color: rgba(255, 255, 255, 0.7);
   font-weight: 400;
   font-family: "Kanit", sans-serif;
   transition: 1s ease;
@@ -3631,7 +3631,7 @@ hamburger
 }
 #footer .footer .socialMedia-links .socialMedia-item a i {
   color: #fff;
-  opacity: 0.7;
+  opacity: 0.3;
   padding-right: 0.5rem;
   transition: 0.5s;
   font-size: 1.5rem;
@@ -3747,13 +3747,12 @@ hamburger
   background: linear-gradient(#cccccc, whitesmoke);
 }
 #footer .footer .socialMedia-links .socialMedia-item:hover p {
-  opacity: 0.5;
-  transition: 0.25s;
+  color: #f4f4f4;
+  transition: 0.5s;
   transition-delay: 0.05s;
 }
 #footer .footer .socialMedia-links .socialMedia-item:hover .bg-i {
   opacity: 0.8;
-  transform: scale(0.7);
   transition: 0.5s;
 }
 #footer .footer .socialMedia-links .socialMedia-item:hover a i {
@@ -3766,12 +3765,14 @@ hamburger
 }
 #footer .footer .socialMedia-links .socialMedia-item.active-item .bg-i {
   transform: translateX(0);
-  opacity: 0.1;
+  transition-timing-function: ease;
+  opacity: 0.2;
   transition: 1s;
 }
 #footer .footer .socialMedia-links .socialMedia-item.active-item:hover .bg-i {
   opacity: 0.8;
-  transform: scale(0.7);
+  transform: scale(0.85);
+  transition-timing-function: ease-in;
   transition: 0.5s;
 }
 #footer .footer .brand {
