--- a/css/style.css
+++ b/css/style.css
@@ -2336,6 +2336,7 @@ hamburger
   #contact .contact .contact-items .contact-item .title {
     flex-basis: 40%;
     align-items: center;
+    padding: 1rem;
   }
 }
 #contact .contact .contact-items .contact-item .title .icon {
@@ -2346,7 +2347,7 @@ hamburger
   border: none;
   background: #29323c;
   border-radius: 50%;
-  outline: 2px solid #fff2;
+  outline: 2px solid #fff4;
   position: relative;
   display: grid;
   place-items: center;
@@ -2354,7 +2355,7 @@ hamburger
 }
 #contact .contact .contact-items .contact-item .title .icon i {
   font-size: 1.5rem;
-  color: rgba(255, 255, 255, 0.7);
+  color: #f4f4f4;
   transition: 0.5s ease;
 }
 @media (min-width: 768px) {
@@ -2409,7 +2410,7 @@ hamburger
   width: 10rem;
   font-size: 0.95rem;
   letter-spacing: 0.05rem;
-  padding: 0.5rem;
+  padding: 0.7rem;
   border-radius: 0.5rem;
   color: #f4f4f4;
   text-transform: capitalize;
@@ -2466,7 +2467,7 @@ hamburger
 #contact .contact .contact-items .contact-item .contact-info a i {
   font-size: 1rem;
   position: relative;
-  opacity: 1;
+  opacity: 0.3;
   margin-left: 0.5rem;
   transition: 1s ease;
   transition-delay: 0.15s;
@@ -2493,6 +2494,7 @@ hamburger
 #contact .contact .contact-items .contact-item:hover .contact-info a i {
   opacity: 1;
   transform: translateY(0);
+  transition: 0.25s;
 }
 
 #projects .projects {
