--- a/sass/_contact.scss
+++ b/sass/_contact.scss
@@ -66,6 +66,7 @@
                     @include md {
                         flex-basis: 40%;
                         align-items: center;
+                        padding: 1rem;
                     }
 
                     // ITEM ICON
@@ -77,7 +78,7 @@
                     border: none;
                     background: $overlay-blue-dark;
                     border-radius: 50%;
-                    outline: 2px solid #fff2;
+                    outline: 2px solid #fff4;
                     position: relative;
                     display: grid;
                     place-items: center;
@@ -85,7 +86,7 @@
 
                     i {
                         font-size: 1.5rem;
-                        color: $brand;
+                        color: $text-light;
                         transition: .5s ease;
                     }
                     @media (min-width: 768px) {
@@ -155,7 +156,7 @@
                         font-size: .95rem;
                         letter-spacing: .05rem;
                         // padding: .7rem;
-                        padding: .5rem;
+                        padding: .7rem;
                         border-radius: .5rem;
                         // margin: .5rem auto;
                         color: $text-light;
@@ -211,7 +212,7 @@
                             font-size: 1rem;
                             position: relative;
                             // transform: translateY(100%);
-                            opacity: 1;
+                            opacity: .3;
                             margin-left: .5rem;
                             transition: 1s ease;
                             transition-delay: .15s;
@@ -249,6 +250,7 @@
                             i {
                                 opacity: 1;
                                 transform: translateY(0);
+                                transition: .25s;
                             }
                         }
                     }
