--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -245,7 +245,7 @@
                     background: $overlay-blue-dark;
                     display: block;
                     text-align: center;
-                    padding: 1rem .5rem;
+                    padding: .7rem;
                     width: 13rem;
                     // margin: 0 auto;
                     color: #fff;
