--- a/css/style.css
+++ b/css/style.css
@@ -2356,7 +2356,9 @@ hamburger
 #contact .contact .contact-items .contact-item .title .icon i {
   font-size: 1.5rem;
   color: #f4f4f4;
+  transform: scale(0.8);
   transition: 0.5s ease;
+  opacity: 0.8;
 }
 @media (min-width: 768px) {
   #contact .contact .contact-items .contact-item .title .icon {
@@ -2474,6 +2476,7 @@ hamburger
 #contact .contact .contact-items .contact-item .contact-info a i {
   font-size: 1rem;
   position: relative;
+  transform: scale(0.7) translateX(0.5rem);
   opacity: 0.3;
   margin-left: 0.5rem;
   transition: 1s ease;
@@ -2492,8 +2495,8 @@ hamburger
   outline: 2px solid #fff1;
 }
 #contact .contact .contact-items .contact-item:hover .icon i {
-  opacity: 0.7;
-  transform: scale(0.8);
+  opacity: 1;
+  transform: scale(1);
 }
 #contact .contact .contact-items .contact-item:hover .contact-info a {
   opacity: 1;
