--- a/sass/_contact.scss
+++ b/sass/_contact.scss
@@ -88,7 +88,9 @@
                         i {
                             font-size: 1.5rem;
                             color: $text-light;
+                            transform: scale(.8);
                             transition: .5s ease;
+                            opacity: .8;
                         }
 
                         @media (min-width: 768px) {
@@ -215,7 +217,7 @@
                         i {
                             font-size: 1rem;
                             position: relative;
-                            // transform: translateY(100%);
+                            transform: scale(.7) translateX(.5rem);
                             opacity: .3;
                             margin-left: .5rem;
                             transition: 1s ease;
@@ -241,8 +243,8 @@
                     .icon {
                         outline: 2px solid #fff1;
                         i {
-                            opacity: .7;
-                            transform: scale(.8);
+                            opacity: 1;
+                            transform: scale(1);
                         }
                     }
                     
