--- a/sass/_contact.scss
+++ b/sass/_contact.scss
@@ -243,7 +243,7 @@
                 &:hover {
                     .icon {
                         outline: 2px solid #fff4;
-                        background: $overlay-blue-darker;
+                        // background: $overlay-blue-darker;
                         i {
                             opacity: 1;
                             transform: scale(1);
