--- a/css/style.css
+++ b/css/style.css
@@ -2347,12 +2347,34 @@ hamburger
   border: none;
   background: #29323c;
   border-radius: 50%;
-  outline: 2px solid #fff2;
-  outline: 2px solid #fff2;
   position: relative;
   display: grid;
   place-items: center;
   transition: 0.5s ease;
+  position: relative;
+}
+#contact .contact .contact-items .contact-item .title .icon::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  outline: 2px solid #fff4;
+  border-radius: 50%;
+  animation: icon-pulse 2s infinite linear;
+}
+@keyframes icon-pulse {
+  0% {
+    outline-color: transparent;
+  }
+  50% {
+    outline-color: #fff4;
+  }
+  100% {
+    transform: scale(1.1);
+    outline-color: transparent;
+  }
 }
 #contact .contact .contact-items .contact-item .title .icon i {
   font-size: 1.5rem;
@@ -2492,8 +2514,9 @@ hamburger
 #contact .contact .contact-items .contact-item:nth-child(3) {
   cursor: alias;
 }
-#contact .contact .contact-items .contact-item:hover .icon {
-  outline: 2px solid #fff4;
+#contact .contact .contact-items .contact-item:hover .icon::after {
+  opacity: 0;
+  transition: 1s;
 }
 #contact .contact .contact-items .contact-item:hover .icon i {
   opacity: 1;
