--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -41,7 +41,7 @@
             display: flex;
             flex-direction: column;
             margin: 5vh auto 0;
-            padding: 5vh 1em;
+            padding: 10vh 5vw;
             border-radius: 0;
             // border: 1px solid $span-gold;
             overflow: hidden;
@@ -199,7 +199,7 @@
             // border-radius: 0;
             width: 100%;
             // margin: 2em 5vw;
-            padding: 5vh 5vw;
+            padding: 10vh 5vw;
             .links-grid{
                 // border: 1px solid yellow;
                 display: grid;
@@ -213,7 +213,7 @@
             }
             .socialMedia-item {
                 // border-bottom: 1px solid hsla(0, 0%, 0%, 0.5);
-                overflow: hidden;
+                // overflow: hidden;
                 // margin: 1rem auto;
                 position: relative;
                 transition: .3s;
