--- a/sass/style.scss
+++ b/sass/style.scss
@@ -105,6 +105,7 @@ section {
     display: grid;
     place-items: center;
     position: relative;
+    // border: 2px solid yellow;
 
     figure {
         width: 100%;
@@ -159,7 +160,7 @@ section {
         // logo pad on small screens
         @media (max-width: 768px) {
             padding: 0 5vw;
-            height: 90vh;
+            height: 65vh;
             display: grid;
             place-items: center;
 
