contact link i translate

--- a/sass/_contact.scss
+++ b/sass/_contact.scss
@@ -240,7 +240,7 @@
                         i {
                             font-size: 1rem;
                             position: relative;
-                            transform: scale(.7) translateX(.5rem);
+                            transform: scale(.7) translateX(-.5rem);
                             opacity: .3;
                             margin-left: .5rem;
                             transition: 1s ease;
